--- a/index.html
+++ b/index.html
@@ -935,8 +935,7 @@
         <div class="copyright">
           <p>&copy; 2025 leandrogrc.dev - Todos os direitos reservados</p>
           <p>
-            Desenvolvido com
-            <i class="fas fa-heart" style="color: var(--primary)"></i> usando as
+            Desenvolvido usando as
             melhores tecnologias
           </p>
         </div>
