--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
       <section class="hero" id="home">
         <div class="hero-content">
           <span class="hero-badge animated"
-            ><i class="fas fa-rocket"></i> Desenvolvedor Full Stack</span
+            ><i class="fas fa-rocket"></i> Desenvolvedor Full Stack Laravel e Mysql</span
           >
           <h1 class="animated">
             Criando experiências digitais <span>excepcionais</span>
